<resources>
    <string name="app_name">BurgerKing</string>
    <string name="Name">Name_Placeholder</string>
    <string name="DescriptionText">Description_Placeholder</string>
    <string name="PriceText">$ 0.00</string>
    <string name="ButtonText">View Order</string>
    <string name="AddButton">Add</string>
    <string name="PlusButton">+</string>
    <string name="MinusButton">-</string>
    <string name="Number_PlaceHolder">x 5</string>
    <string name="MyOrder">My Order</string>
    <string name="Total">Total:</string>
    <string name="ToDo">ToDo</string>
</resources>
