<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgProduct"
        android:layout_width="100dp"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/ToDo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/product1_image" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/Name"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgProduct"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/PriceText"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgProduct"
        app:layout_constraintStart_toStartOf="@+id/imgProduct"
        app:layout_constraintTop_toBottomOf="@+id/imgProduct" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="16dp"
        android:text="@string/DescriptionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPlus"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="72dp"
        android:background="#00FFFFFF"
        android:text="@string/PlusButton"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtAmount"
        app:layout_constraintTop_toBottomOf="@+id/imgProduct" />

    <Button
        android:id="@+id/btnMinus"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="72dp"
        android:background="#00FFFFFF"
        android:text="@string/MinusButton"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtAmount"
        app:layout_constraintStart_toEndOf="@+id/txtPrice"
        app:layout_constraintTop_toBottomOf="@+id/imgProduct" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="64dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/AddButton"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDescription"
        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
        app:layout_constraintStart_toEndOf="@+id/btnMinus" />

    <TextView
        android:id="@+id/txtAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Number_PlaceHolder"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtPrice"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

</androidx.constraintlayout.widget.ConstraintLayout>